--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /* ===== Importation des polices ===== */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Montserrat:wght@600;700;900&display=swap');
 
@@ -588,7 +587,7 @@ footer {
 
 .cert-btn:hover {
   background: #374151;
-=======
+}
 /* ===== Importation des polices ===== */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Montserrat:wght@600;700;900&display=swap');
 
@@ -1178,5 +1177,4 @@ footer {
 
 .cert-btn:hover {
   background: #374151;
->>>>>>> beaa0e72701c7d106237d1ffea631f60ab3f0103
 }
